knative-v2/authorizationpolicy.yaml
# apiVersion: security.istio.io/v1beta1
# kind: AuthorizationPolicy
# metadata:
#  name: allow-knative-serving
#  namespace: kubeflow-user
# spec:
#  action: ALLOW
#  rules:
#  - from:
#    - source:
#       namespaces:
#       - kubeflow-user
#       - "knative-serving"
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-knative-serving-metrics
  namespace: kubeflow-user
spec:
  action: ALLOW
  rules:
  - to:
    - operation:
        paths:
        - /metrics   # The path to collect metrics by system pod.
        - /healthz   # The path to probe by system pod.
